@@ -56,6 +56,17 @@ IF(${VAR})
 ENDIF(${VAR})
 ENDMACRO(CHECK_COMPILER_VISIBILITY VAR)
 
+MACRO(CHECK_COMPILER_ATTRIBUTE VAR)
+CHECK_C_SOURCE_COMPILES(
+"void  foo (int bar __attribute__((unused)) ) { }
+static void baz (void) __attribute__((unused));
+static void baz (void) { }
+int main(){}
+" ${VAR})
+IF(${VAR})
+  ADD_DEFINE(HAVE___ATTRIBUTE__)
+ENDIF(${VAR})
+ENDMACRO(CHECK_COMPILER_ATTRIBUTE VAR)
 
 ADD_DEFINE("PACKAGE_VERSION \"${PACKAGE_VERSION}\"")
 
@@ -558,6 +569,7 @@ ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_6
 
 
 # compiler specific settings
+CHECK_COMPILER_ATTRIBUTE(HAVE_ATTRIBUTE)
 CHECK_COMPILER_VISIBILITY(HAVE_VISIBILITY)
 IF(CMAKE_COMPILER_IS_GNUCC)
   ADD_DEFINITIONS(-std=c99)
